@@ -29,3 +29,5 @@ major changes tmdb revamped && style
 11/10/2023
 
 -- silly fix for search when anime is a movie, added alt in every image, added redis caching in search
+
+-- removed redis cache from main slider
